Remove 'Topへ' text from button
Removed the text 'Topへ' from the button in index.html.

--- a/templates/index.html
+++ b/templates/index.html
@@ -426,7 +426,7 @@
                 <path fill="currentColor" d="M12 4l-8 8h6v8h4v-8h6z"></path>
             </svg>
         </div>
-        <span>Topへ</span>
+        <span></span>
     </button>
 
     <!-- Scripts -->
